#9 Updated/added enums FormsRecaptchaMode, MailboxType, PublishType, FreeTextOperator

--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -322,14 +322,14 @@ items:
   nameWithType: NSFormEntity.GetRecaptchaMode()
   fullName: CRMScript.NetServer.NSFormEntity.GetRecaptchaMode()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = NotAvailable</li><li>Enum: 1 = GlobalKeysExist</li><li>Enum: 2 = KeysNeeded</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetRecaptchaMode()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What is the state of the recaptcha configuration? This is a read-only member
+      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFormEntity thing;\nInteger recaptchaMode = thing.GetRecaptchaMode();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormEntity.GetRecipe()
@@ -793,7 +793,7 @@ items:
     parameters:
     - id: recaptchaMode
       type: CRMScript.Global.Integer
-      description: What is the state of the recaptcha configuration? This is a read-only member. See enum recaptchaMode.
+      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1033,3 +1033,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FormsRecaptchaMode
+  commentId: T:CRMScript.NetServer.FormsRecaptchaMode
+  isExternal: true
+  name: FormsRecaptchaMode
+  nameWithType: FormsRecaptchaMode
+  fullName: CRMScript.NetServer.FormsRecaptchaMode
