--- a/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
@@ -132,14 +132,14 @@ items:
   nameWithType: NSFreeText.GetMultiWordOperator()
   fullName: CRMScript.NetServer.NSFreeText.GetMultiWordOperator()
   type: Method
-  summary: "\n<ul><li>Enum: 1 = Contains</li><li>Enum: 2 = StartsWith</li><li>Enum: 3 = ExactMatch</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMultiWordOperator()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match
+      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFreeText thing;\nInteger multiWordOperator = thing.GetMultiWordOperator();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFreeText.GetOccurrences()
@@ -172,14 +172,14 @@ items:
   nameWithType: NSFreeText.GetSingleWordOperator()
   fullName: CRMScript.NetServer.NSFreeText.GetSingleWordOperator()
   type: Method
-  summary: "\n<ul><li>Enum: 1 = Contains</li><li>Enum: 2 = StartsWith</li><li>Enum: 3 = ExactMatch</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetSingleWordOperator()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match
+      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFreeText thing;\nInteger singleWordOperator = thing.GetSingleWordOperator();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFreeText.SetAutoEnableTravelAreas(Bool)
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: multiWordOperator
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See enum multiWordOperator.
+      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: singleWordOperator
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See enum singleWordOperator.
+      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -367,3 +367,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FreeTextOperator
+  commentId: T:CRMScript.NetServer.FreeTextOperator
+  isExternal: true
+  name: FreeTextOperator
+  nameWithType: FreeTextOperator
+  fullName: CRMScript.NetServer.FreeTextOperator
