--- a/docs/api-reference/CRMScript.NetServer.freeTextOperator.yml
+++ b/docs/api-reference/CRMScript.NetServer.freeTextOperator.yml
@@ -1,62 +1,63 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.freeTextOperator
-  commentId: T:CRMScript.NetServer.freeTextOperator
-  id: freeTextOperator
+- uid: CRMScript.NetServer.FreeTextOperator
+  # Same as SuperOffice.Data.FreeTextOperator
+  commentId: T:CRMScript.NetServer.FreeTextOperator
+  id: FreeTextOperator
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.freeTextOperator.Contains
-  - CRMScript.NetServer.freeTextOperator.StartsWith
-  - CRMScript.NetServer.freeTextOperator.ExactMatch
-  name: freeTextOperator
-  nameWithType: freeTextOperator
-  fullName: CRMScript.NetServer.freeTextOperator
+  - CRMScript.NetServer.FreeTextOperator.Contains
+  - CRMScript.NetServer.FreeTextOperator.StartsWith
+  - CRMScript.NetServer.FreeTextOperator.ExactMatch
+  name: FreeTextOperator
+  nameWithType: FreeTextOperator
+  fullName: CRMScript.NetServer.FreeTextOperator
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.freeTextOperator.Contains
-  commentId: F:CRMScript.NetServer.freeTextOperator.Contains
-  id: freeTextOperator.Contains
+  summary: "\nFree-text operator\n"
+- uid: CRMScript.NetServer.FreeTextOperator.Contains
+  commentId: F:CRMScript.NetServer.FreeTextOperator.Contains
+  id: FreeTextOperator.Contains
   langs:
   - crmscript
-  name: freeTextOperator.Contains
-  nameWithType: freeTextOperator.Contains
-  fullName: CRMScript.NetServer.freeTextOperator.Contains
+  name: FreeTextOperator.Contains
+  nameWithType: FreeTextOperator.Contains
+  fullName: CRMScript.NetServer.FreeTextOperator.Contains
   type: Field
   summary: "\n1: Contains\n"
   syntax: 
     content: Contains = 1
-    type: CRMScript.NetServer.freeTextOperator
-- uid: CRMScript.NetServer.freeTextOperator.StartsWith
-  commentId: F:CRMScript.NetServer.freeTextOperator.StartsWith
-  id: freeTextOperator.StartsWith
+    type: CRMScript.NetServer.FreeTextOperator
+- uid: CRMScript.NetServer.FreeTextOperator.StartsWith
+  commentId: F:CRMScript.NetServer.FreeTextOperator.StartsWith
+  id: FreeTextOperator.StartsWith
   langs:
   - crmscript
-  name: freeTextOperator.StartsWith
-  nameWithType: freeTextOperator.StartsWith
-  fullName: CRMScript.NetServer.freeTextOperator.StartsWith
+  name: FreeTextOperator.StartsWith
+  nameWithType: FreeTextOperator.StartsWith
+  fullName: CRMScript.NetServer.FreeTextOperator.StartsWith
   type: Field
-  summary: "\n2: StartsWith\n"
+  summary: "\n2: Starts with\n"
   syntax: 
     content: StartsWith = 2
-    type: CRMScript.NetServer.freeTextOperator
-- uid: CRMScript.NetServer.freeTextOperator.ExactMatch
-  commentId: F:CRMScript.NetServer.freeTextOperator.ExactMatch
-  id: freeTextOperator.ExactMatch
+    type: CRMScript.NetServer.FreeTextOperator
+- uid: CRMScript.NetServer.FreeTextOperator.ExactMatch
+  commentId: F:CRMScript.NetServer.FreeTextOperator.ExactMatch
+  id: FreeTextOperator.ExactMatch
   langs:
   - crmscript
-  name: freeTextOperator.ExactMatch
-  nameWithType: freeTextOperator.ExactMatch
-  fullName: CRMScript.NetServer.freeTextOperator.ExactMatch
+  name: FreeTextOperator.ExactMatch
+  nameWithType: FreeTextOperator.ExactMatch
+  fullName: CRMScript.NetServer.FreeTextOperator.ExactMatch
   type: Field
-  summary: "\n3: ExactMatch\n"
+  summary: "\n3: Exact match\n"
   syntax: 
     content: ExactMatch = 3
-    type: CRMScript.NetServer.freeTextOperator
+    type: CRMScript.NetServer.FreeTextOperator
 references:
-- uid: CRMScript.NetServer.freeTextOperator
-  commentId: T:CRMScript.NetServer.freeTextOperator
+- uid: CRMScript.NetServer.FreeTextOperator
+  commentId: T:CRMScript.NetServer.FreeTextOperator
   isExternal: true
-  name: freeTextOperator
-  nameWithType: freeTextOperator
-  fullName: CRMScript.NetServer.freeTextOperator
+  name: FreeTextOperator
+  nameWithType: FreeTextOperator
+  fullName: CRMScript.NetServer.FreeTextOperator
