--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -63,17 +63,17 @@ items:
   - CRMScript.NetServer.externalUserInfoModification
   - CRMScript.NetServer.fieldKeys
   - CRMScript.NetServer.FieldMetadataType
-  - CRMScript.NetServer.freeTextOperator
+  - CRMScript.NetServer.FreeTextOperator
   - CRMScript.NetServer.GeneratorEncoding
   - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.justification
   - CRMScript.NetServer.languageId
   - CRMScript.NetServer.level
   - CRMScript.NetServer.LicenseStatus
+  - CRMScript.NetServer.MailboxType
   - CRMScript.NetServer.maxLevel
   - CRMScript.NetServer.messageCategory
   - CRMScript.NetServer.msgClosingStatus
-  - CRMScript.NetServer.multiWordOperator
   - CRMScript.NetServer.name
   - CRMScript.NetServer.Navigation
   - CRMScript.NetServer.NSAccessGatewayInfo
@@ -446,9 +446,8 @@ items:
   - CRMScript.NetServer.platform
   - CRMScript.NetServer.prefLevel
   - CRMScript.NetServer.priority
-  - CRMScript.NetServer.publishType
+  - CRMScript.NetServer.PublishType
   - CRMScript.NetServer.readStatus
-  - CRMScript.NetServer.recaptchaMode
   - CRMScript.NetServer.RecurrencePattern
   - CRMScript.NetServer.RecurrenceUpdateMode
   - CRMScript.NetServer.relationToOwner
@@ -460,9 +459,7 @@ items:
   - CRMScript.NetServer.selectionType
   - CRMScript.NetServer.selectionUnionType
   - CRMScript.NetServer.SenderMailMode
-  - CRMScript.NetServer.serverType
   - CRMScript.NetServer.ShowState
-  - CRMScript.NetServer.singleWordOperator
   - CRMScript.NetServer.slevel
   - CRMScript.NetServer.source
   - CRMScript.NetServer.state
@@ -1595,12 +1592,12 @@ references:
   name: NSFormEntity
   nameWithType: NSFormEntity
   fullName: CRMScript.NetServer.NSFormEntity
-- uid: CRMScript.NetServer.recaptchaMode
-  commentId: T:CRMScript.NetServer.recaptchaMode
+- uid: CRMScript.NetServer.FormsRecaptchaMode
+  commentId: T:CRMScript.NetServer.FormsRecaptchaMode
   isExternal: true
-  name: recaptchaMode
-  nameWithType: recaptchaMode
-  fullName: CRMScript.NetServer.recaptchaMode
+  name: FormsRecaptchaMode
+  nameWithType: FormsRecaptchaMode
+  fullName: CRMScript.NetServer.FormsRecaptchaMode
 - uid: CRMScript.NetServer.NSFormSubmissionEntity
   commentId: T:CRMScript.NetServer.NSFormSubmissionEntity
   isExternal: true
@@ -1619,30 +1616,18 @@ references:
   name: NSFreeText
   nameWithType: NSFreeText
   fullName: CRMScript.NetServer.NSFreeText
-- uid: CRMScript.NetServer.multiWordOperator
-  commentId: T:CRMScript.NetServer.multiWordOperator
-  isExternal: true
-  name: multiWordOperator
-  nameWithType: multiWordOperator
-  fullName: CRMScript.NetServer.multiWordOperator
-- uid: CRMScript.NetServer.singleWordOperator
-  commentId: T:CRMScript.NetServer.singleWordOperator
-  isExternal: true
-  name: singleWordOperator
-  nameWithType: singleWordOperator
-  fullName: CRMScript.NetServer.singleWordOperator
 - uid: CRMScript.NetServer.NSFreeTextAgent
   commentId: T:CRMScript.NetServer.NSFreeTextAgent
   isExternal: true
   name: NSFreeTextAgent
   nameWithType: NSFreeTextAgent
   fullName: CRMScript.NetServer.NSFreeTextAgent
-- uid: CRMScript.NetServer.freeTextOperator
-  commentId: T:CRMScript.NetServer.freeTextOperator
+- uid: CRMScript.NetServer.FreeTextOperator
+  commentId: T:CRMScript.NetServer.FreeTextOperator
   isExternal: true
-  name: freeTextOperator
-  nameWithType: freeTextOperator
-  fullName: CRMScript.NetServer.freeTextOperator
+  name: FreeTextOperator
+  nameWithType: FreeTextOperator
+  fullName: CRMScript.NetServer.FreeTextOperator
 - uid: CRMScript.NetServer.NSGrantedModuleLicense
   commentId: T:CRMScript.NetServer.NSGrantedModuleLicense
   isExternal: true
@@ -1847,12 +1832,12 @@ references:
   name: NSMailboxEntity
   nameWithType: NSMailboxEntity
   fullName: CRMScript.NetServer.NSMailboxEntity
-- uid: CRMScript.NetServer.serverType
-  commentId: T:CRMScript.NetServer.serverType
+- uid: CRMScript.NetServer.MailboxType
+  commentId: T:CRMScript.NetServer.MailboxType
   isExternal: true
-  name: serverType
-  nameWithType: serverType
-  fullName: CRMScript.NetServer.serverType
+  name: MailboxType
+  nameWithType: MailboxType
+  fullName: CRMScript.NetServer.MailboxType
 - uid: CRMScript.NetServer.NSMailMergeSettings
   commentId: T:CRMScript.NetServer.NSMailMergeSettings
   isExternal: true
@@ -2267,12 +2252,12 @@ references:
   name: NSProjectEventEntity
   nameWithType: NSProjectEventEntity
   fullName: CRMScript.NetServer.NSProjectEventEntity
-- uid: CRMScript.NetServer.publishType
-  commentId: T:CRMScript.NetServer.publishType
+- uid: CRMScript.NetServer.PublishType
+  commentId: T:CRMScript.NetServer.PublishType
   isExternal: true
-  name: publishType
-  nameWithType: publishType
-  fullName: CRMScript.NetServer.publishType
+  name: PublishType
+  nameWithType: PublishType
+  fullName: CRMScript.NetServer.PublishType
 - uid: CRMScript.NetServer.NSProjectMember
   commentId: T:CRMScript.NetServer.NSProjectMember
   isExternal: true
