--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -974,8 +974,10 @@ items:
       href: CRMScript.NetServer.fieldKeys.yml
     - name: FieldMetadataType
       href: CRMScript.NetServer.FieldMetadataType.yml
-    - name: Enum freeTextOperator
-      href: CRMScript.NetServer.freeTextOperator.yml
+    - name: FormsRecaptchaMode
+      href: CRMScript.NetServer.FormsRecaptchaMode.yml
+    - name: FreeTextOperator
+      href: CRMScript.NetServer.FreeTextOperator.yml
     - name: GeneratorEncoding
       href: CRMScript.NetServer.GeneratorEncoding.yml
     - name: InvitationStatus
@@ -994,8 +996,6 @@ items:
       href: CRMScript.NetServer.messageCategory.yml
     - name: Enum msgClosingStatus
       href: CRMScript.NetServer.msgClosingStatus.yml
-    - name: Enum multiWordOperator
-      href: CRMScript.NetServer.multiWordOperator.yml
     - name: Enum name
       href: CRMScript.NetServer.name.yml
     - name: Navigation
@@ -1022,12 +1022,10 @@ items:
       href: CRMScript.NetServer.prefLevel.yml
     - name: Enum priority
       href: CRMScript.NetServer.priority.yml
-    - name: Enum publishType
-      href: CRMScript.NetServer.publishType.yml
+    - name: PublishType
+      href: CRMScript.NetServer.PublishType.yml
     - name: Enum readStatus
       href: CRMScript.NetServer.readStatus.yml
-    - name: Enum recaptchaMode
-      href: CRMScript.NetServer.recaptchaMode.yml
     - name: RecurrencePattern
       href: CRMScript.NetServer.RecurrencePattern.yml
     - name: RecurrenceUpdateMode
@@ -1050,12 +1048,10 @@ items:
       href: CRMScript.NetServer.selectionUnionType.yml
     - name: SenderMailMode
       href: CRMScript.NetServer.SenderMailMode.yml
-    - name: Enum serverType
-      href: CRMScript.NetServer.serverType.yml
+    - name: MailboxType
+      href: CRMScript.NetServer.MailboxType.yml
     - name: ShowState
       href: CRMScript.NetServer.ShowState.yml
-    - name: Enum singleWordOperator
-      href: CRMScript.NetServer.singleWordOperator.yml
     - name: Enum slevel
       href: CRMScript.NetServer.slevel.yml
     - name: Enum source
