--- a/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
@@ -230,7 +230,7 @@ items:
     parameters:
     - id: freeTextOperator
       type: CRMScript.Global.Integer
-      description: See enum freeTextOperator.
+      description: See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,7 +252,7 @@ items:
     parameters:
     - id: freeTextOperator
       type: CRMScript.Global.Integer
-      description: See enum freeTextOperator.
+      description: See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -366,3 +366,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.FreeTextOperator
+  commentId: T:CRMScript.NetServer.FreeTextOperator
+  isExternal: true
+  name: FreeTextOperator
+  nameWithType: FreeTextOperator
+  fullName: CRMScript.NetServer.FreeTextOperator
