--- a/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
@@ -358,14 +358,14 @@ items:
   nameWithType: NSProjectEventEntity.GetPublishType()
   fullName: CRMScript.NetServer.NSProjectEventEntity.GetPublishType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Undefined</li><li>Enum: 1 = External</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPublishType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Type of publishing action, 0 = Unknown, 1 = to external persons
+      description: Type of publishing action. See <xref href=\"PublishType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSProjectEventEntity thing;\nInteger publishType = thing.GetPublishType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectEventEntity.GetSignOff()
@@ -991,7 +991,7 @@ items:
     parameters:
     - id: publishType
       type: CRMScript.Global.Integer
-      description: Type of publishing action, 0 = Unknown, 1 = to external persons See enum publishType.
+      description: Type of publishing action. See <xref href=\"PublishType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1411,3 +1411,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.PublishType
+  commentId: T:CRMScript.NetServer.PublishType
+  isExternal: true
+  name: PublishType
+  nameWithType: PublishType
+  fullName: CRMScript.NetServer.PublishType
