--- a/docs/api-reference/CRMScript.NetServer.publishType.yml
+++ b/docs/api-reference/CRMScript.NetServer.publishType.yml
@@ -1,48 +1,49 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.publishType
-  commentId: T:CRMScript.NetServer.publishType
-  id: publishType
+- uid: CRMScript.NetServer.PublishType
+  # Same as SuperOffice.Data.PublishType
+  commentId: T:CRMScript.NetServer.PublishType
+  id: PublishType
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.publishType.Undefined
-  - CRMScript.NetServer.publishType.External
-  name: publishType
-  nameWithType: publishType
-  fullName: CRMScript.NetServer.publishType
+  - CRMScript.NetServer.PublishType.Undefined
+  - CRMScript.NetServer.PublishType.External
+  name: PublishType
+  nameWithType: PublishType
+  fullName: CRMScript.NetServer.PublishType
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.publishType.Undefined
-  commentId: F:CRMScript.NetServer.publishType.Undefined
-  id: publishType.Undefined
+  summary: "\nShould this field be published by default?\n"
+- uid: CRMScript.NetServer.PublishType.Undefined
+  commentId: F:CRMScript.NetServer.PublishType.Undefined
+  id: PublishType.Undefined
   langs:
   - crmscript
-  name: publishType.Undefined
-  nameWithType: publishType.Undefined
-  fullName: CRMScript.NetServer.publishType.Undefined
+  name: PublishType.Undefined
+  nameWithType: PublishType.Undefined
+  fullName: CRMScript.NetServer.PublishType.Undefined
   type: Field
   summary: "\n0: Undefined\n"
   syntax: 
     content: Undefined = 0
-    type: CRMScript.NetServer.publishType
-- uid: CRMScript.NetServer.publishType.External
-  commentId: F:CRMScript.NetServer.publishType.External
-  id: publishType.External
+    type: CRMScript.NetServer.PublishType
+- uid: CRMScript.NetServer.PublishType.External
+  commentId: F:CRMScript.NetServer.PublishType.External
+  id: PublishType.External
   langs:
   - crmscript
-  name: publishType.External
-  nameWithType: publishType.External
-  fullName: CRMScript.NetServer.publishType.External
+  name: PublishType.External
+  nameWithType: PublishType.External
+  fullName: CRMScript.NetServer.PublishType.External
   type: Field
-  summary: "\n1: External\n"
+  summary: "\n1: Published to external persons\n"
   syntax: 
     content: External = 1
-    type: CRMScript.NetServer.publishType
+    type: CRMScript.NetServer.PublishType
 references:
-- uid: CRMScript.NetServer.publishType
-  commentId: T:CRMScript.NetServer.publishType
+- uid: CRMScript.NetServer.PublishType
+  commentId: T:CRMScript.NetServer.PublishType
   isExternal: true
-  name: publishType
-  nameWithType: publishType
-  fullName: CRMScript.NetServer.publishType
+  name: PublishType
+  nameWithType: PublishType
+  fullName: CRMScript.NetServer.PublishType
