#9 Consolidated enum PreferenceLevel

--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
@@ -434,7 +434,7 @@ items:
       description: 
     - id: prefLevel
       type: CRMScript.Global.Integer
-      description: See enum prefLevel.
+      description: See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSPreference
   example: 
@@ -462,7 +462,7 @@ items:
       description: 
     - id: prefLevel
       type: CRMScript.Global.Integer
-      description: 
+      description: See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: ownerId
       type: CRMScript.Global.Integer
       description: 
@@ -1077,3 +1077,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.PreferenceLevel
+  commentId: T:CRMScript.NetServer.PreferenceLevel
+  isExternal: true
+  name: PreferenceLevel
+  nameWithType: PreferenceLevel
+  fullName: CRMScript.NetServer.PreferenceLevel
