--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -68,10 +68,8 @@ items:
   - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.justification
   - CRMScript.NetServer.languageId
-  - CRMScript.NetServer.level
   - CRMScript.NetServer.LicenseStatus
   - CRMScript.NetServer.MailboxType
-  - CRMScript.NetServer.maxLevel
   - CRMScript.NetServer.messageCategory
   - CRMScript.NetServer.msgClosingStatus
   - CRMScript.NetServer.name
@@ -439,12 +437,11 @@ items:
   - CRMScript.NetServer.operation
   - CRMScript.NetServer.orientation
   - CRMScript.NetServer.origin
-  - CRMScript.NetServer.ownerId
   - CRMScript.NetServer.participantStatus
   - CRMScript.NetServer.path
   - CRMScript.NetServer.personId
   - CRMScript.NetServer.platform
-  - CRMScript.NetServer.prefLevel
+  - CRMScript.NetServer.PreferenceLevel
   - CRMScript.NetServer.priority
   - CRMScript.NetServer.PublishType
   - CRMScript.NetServer.readStatus
@@ -466,7 +463,6 @@ items:
   - CRMScript.NetServer.status
   - CRMScript.NetServer.statusFilter
   - CRMScript.NetServer.StringSearchType
-  - CRMScript.NetServer.sysMaxLevel
   - CRMScript.NetServer.tableRights
   - CRMScript.NetServer.TaskType
   - CRMScript.NetServer.ticketChangedPriority
@@ -2090,30 +2086,12 @@ references:
   name: displayType
   nameWithType: displayType
   fullName: CRMScript.NetServer.displayType
-- uid: CRMScript.NetServer.level
-  commentId: T:CRMScript.NetServer.level
-  isExternal: true
-  name: level
-  nameWithType: level
-  fullName: CRMScript.NetServer.level
 - uid: CRMScript.NetServer.NSPreferenceAgent
   commentId: T:CRMScript.NetServer.NSPreferenceAgent
   isExternal: true
   name: NSPreferenceAgent
   nameWithType: NSPreferenceAgent
   fullName: CRMScript.NetServer.NSPreferenceAgent
-- uid: CRMScript.NetServer.prefLevel
-  commentId: T:CRMScript.NetServer.prefLevel
-  isExternal: true
-  name: prefLevel
-  nameWithType: prefLevel
-  fullName: CRMScript.NetServer.prefLevel
-- uid: CRMScript.NetServer.ownerId
-  commentId: T:CRMScript.NetServer.ownerId
-  isExternal: true
-  name: ownerId
-  nameWithType: ownerId
-  fullName: CRMScript.NetServer.ownerId
 - uid: CRMScript.NetServer.NSPreferenceDescription
   commentId: T:CRMScript.NetServer.NSPreferenceDescription
   isExternal: true
@@ -2126,18 +2104,12 @@ references:
   name: accessFlags
   nameWithType: accessFlags
   fullName: CRMScript.NetServer.accessFlags
-- uid: CRMScript.NetServer.maxLevel
-  commentId: T:CRMScript.NetServer.maxLevel
+- uid: CRMScript.NetServer.PreferenceLevel
+  commentId: T:CRMScript.NetServer.PreferenceLevel
   isExternal: true
-  name: maxLevel
-  nameWithType: maxLevel
-  fullName: CRMScript.NetServer.maxLevel
-- uid: CRMScript.NetServer.sysMaxLevel
-  commentId: T:CRMScript.NetServer.sysMaxLevel
-  isExternal: true
-  name: sysMaxLevel
-  nameWithType: sysMaxLevel
-  fullName: CRMScript.NetServer.sysMaxLevel
+  name: PreferenceLevel
+  nameWithType: PreferenceLevel
+  fullName: CRMScript.NetServer.PreferenceLevel
 - uid: CRMScript.NetServer.valueType
   commentId: T:CRMScript.NetServer.valueType
   isExternal: true
