--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -986,12 +986,8 @@ items:
       href: CRMScript.NetServer.justification.yml
     - name: Enum languageId
       href: CRMScript.NetServer.languageId.yml
-    - name: Enum level
-      href: CRMScript.NetServer.level.yml
     - name: Enum LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
-    - name: Enum maxLevel
-      href: CRMScript.NetServer.maxLevel.yml
     - name: Enum messageCategory
       href: CRMScript.NetServer.messageCategory.yml
     - name: Enum msgClosingStatus
@@ -1008,8 +1004,6 @@ items:
       href: CRMScript.NetServer.orientation.yml
     - name: Enum origin
       href: CRMScript.NetServer.origin.yml
-    - name: Enum ownerId
-      href: CRMScript.NetServer.ownerId.yml
     - name: Enum participantStatus
       href: CRMScript.NetServer.participantStatus.yml
     - name: Enum path
@@ -1018,8 +1012,8 @@ items:
       href: CRMScript.NetServer.personId.yml
     - name: Enum platform
       href: CRMScript.NetServer.platform.yml
-    - name: Enum prefLevel
-      href: CRMScript.NetServer.prefLevel.yml
+    - name: PreferenceLevel
+      href: CRMScript.NetServer.PreferenceLevel.yml
     - name: Enum priority
       href: CRMScript.NetServer.priority.yml
     - name: PublishType
@@ -1064,8 +1058,6 @@ items:
       href: CRMScript.NetServer.statusFilter.yml
     - name: StringSearchType
       href: CRMScript.NetServer.StringSearchType.yml
-    - name: Enum sysMaxLevel
-      href: CRMScript.NetServer.sysMaxLevel.yml
     - name: Enum tableRights
       href: CRMScript.NetServer.tableRights.yml
     - name: TaskType
