#47 Updated toc.yml with missing files

--- a/docs/api-reference/trigger-scripts/toc.yml
+++ b/docs/api-reference/trigger-scripts/toc.yml
@@ -38,22 +38,124 @@ items:
   href: NewTicketFromSpmLink.md
 - name: SalesAfterSaveAppointment
   href: SalesAfterSaveAppointment.md
+- name: SalesAfterSaveContact
+  href: SalesAfterSaveContact.md
+- name: SalesAfterSaveDocument
+  href: SalesAfterSaveDocument.md
+- name: SalesAfterSavePerson
+  href: SalesAfterSavePerson.md
+- name: SalesAfterSaveProject
+  href: SalesAfterSaveProject.md
+- name: SalesAfterSaveProjectMember
+  href: SalesAfterSaveProjectMember.md
+- name: SalesAfterSaveQuote
+  href: SalesAfterSaveQuote.md
+- name: SalesAfterSaveQuoteLine
+  href: SalesAfterSaveQuoteLine.md
+- name: SalesAfterSaveRelation
+  href: SalesAfterSaveRelation.md
+- name: SalesAfterSaveSale
+  href: SalesAfterSaveSale.md
+- name: SalesAfterSaveSelection
+  href: SalesAfterSaveSelection.md
+- name: SalesAfterSaveSelectionMember
+  href: SalesAfterSaveSelectionMember.md
 - name: SalesAfterSaveStakeholder
   href: SalesAfterSaveStakeholder.md
 - name: SalesBeforeSaveAppointment
   href: SalesBeforeSaveAppointment.md
+- name: SalesBeforeSaveContact
+  href: SalesBeforeSaveContact.md
+- name: SalesBeforeSaveDocument
+  href: SalesBeforeSaveDocument.md
+- name: SalesBeforeSavePerson
+  href: SalesBeforeSavePerson.md
+- name: SalesBeforeSaveProject
+  href: SalesBeforeSaveProject.md
+- name: SalesBeforeSaveProjectMember
+  href: SalesBeforeSaveProjectMember.md
+- name: SalesBeforeSaveQuote
+  href: SalesBeforeSaveQuote.md
+- name: SalesBeforeSaveQuoteLine
+  href: SalesBeforeSaveQuoteLine.md
+- name: SalesBeforeSaveRelation
+  href: SalesBeforeSaveRelation.md
+- name: SalesBeforeSaveSale
+  href: SalesBeforeSaveSale.md
+- name: SalesBeforeSaveSelection
+  href: SalesBeforeSaveSelection.md
+- name: SalesBeforeSaveSelectionMember
+  href: SalesBeforeSaveSelectionMember.md
 - name: SalesBeforeSaveStakeholder
   href: SalesBeforeSaveStakeholder.md
 - name: ScheduledTaskFailed
   href: ScheduledTaskFailed.md
+- name: ServiceScreenAddMessageAfterSubmit
+  href: ServiceScreenAddMessageAfterSubmit.md
+- name: ServiceScreenAddMessageBeforeSubmit
+  href: ServiceScreenAddMessageBeforeSubmit.md
+- name: ServiceScreenAddMessageLoad
+  href: ServiceScreenAddMessageLoad.md
+- name: ServiceScreenEditCompanyAfterSubmit
+  href: ServiceScreenEditCompanyAfterSubmit.md
+- name: ServiceScreenEditCompanyBeforeSubmit
+  href: ServiceScreenEditCompanyBeforeSubmit.md
 - name: ServiceScreenEditCompanyLoad
   href: ServiceScreenEditCompanyLoad.md
+- name: ServiceScreenEditCustomerAfterSubmit
+  href: ServiceScreenEditCustomerAfterSubmit.md
+- name: ServiceScreenEditCustomerBeforeSubmit
+  href: ServiceScreenEditCustomerBeforeSubmit.md
 - name: ServiceScreenEditCustomerLoad
   href: ServiceScreenEditCustomerLoad.md
+- name: ServiceScreenEditExtraTableAfterSubmit
+  href: ServiceScreenEditExtraTableAfterSubmit.md
+- name: ServiceScreenEditExtraTableBeforeSubmit
+  href: ServiceScreenEditExtraTableBeforeSubmit.md
 - name: ServiceScreenEditExtraTableLoad
   href: ServiceScreenEditExtraTableLoad.md
+- name: ServiceScreenEditTicketAfterSubmit
+  href: ServiceScreenEditTicketAfterSubmit.md
+- name: ServiceScreenEditTicketBeforeSubmit
+  href: ServiceScreenEditTicketBeforeSubmit.md
+- name: ServiceScreenEditTicketLoad
+  href: ServiceScreenEditTicketLoad.md
+- name: ServiceScreenForwardAfterSubmit
+  href: ServiceScreenForwardAfterSubmit.md
+- name: ServiceScreenForwardBeforeSubmit
+  href: ServiceScreenForwardBeforeSubmit.md
 - name: ServiceScreenForwardLoad
   href: ServiceScreenForwardLoad.md
+- name: ServiceScreenListTicketMessagesAfterSubmit
+  href: ServiceScreenListTicketMessagesAfterSubmit.md
+- name: ServiceScreenListTicketMessagesBeforeSubmit
+  href: ServiceScreenListTicketMessagesBeforeSubmit.md
+- name: ServiceScreenListTicketMessagesLoad
+  href: ServiceScreenListTicketMessagesLoad.md
+- name: ServiceScreenNewQuickTicketAfterSubmit
+  href: ServiceScreenNewQuickTicketAfterSubmit.md
+- name: ServiceScreenNewQuickTicketBeforeSubmit
+  href: ServiceScreenNewQuickTicketBeforeSubmit.md
+- name: ServiceScreenNewQuickTicketLoad
+  href: ServiceScreenNewQuickTicketLoad.md
+- name: ServiceScreenNewTicketAfterSubmit
+  href: ServiceScreenNewTicketAfterSubmit.md
+- name: ServiceScreenNewTicketBeforeSubmit
+  href: ServiceScreenNewTicketBeforeSubmit.md
+- name: ServiceScreenNewTicketLoad
+  href: ServiceScreenNewTicketLoad.md
+- name: ServiceScreenViewCompanyAfterSubmit
+  href: ServiceScreenViewCompanyAfterSubmit.md
+- name: ServiceScreenViewCompanyBeforeSubmit
+  href: ServiceScreenViewCompanyBeforeSubmit.md
+- name: ServiceScreenViewCompanyLoad
+  href: ServiceScreenViewCompanyLoad.md
+- name: ServiceScreenViewCustomerAfterSubmit
+  href: ServiceScreenViewCustomerAfterSubmit.md
+- name: ServiceScreenViewCustomerBeforeSubmit
+  href: ServiceScreenViewCustomerBeforeSubmit.md
+- name: ServiceScreenViewCustomerLoad
+  href: ServiceScreenViewCustomerLoad.md
 - name: TicketActivated
   href: TicketActivated.md
 - name: TicketChangedCategory
@@ -78,6 +180,8 @@ items:
   href: TicketInternalMessageAdded.md
 - name: TicketMessageAdded
   href: TicketMessageAdded.md
+- name: TicketMessageSentimentCalculated
+  href: TicketMessageSentimentCalculated.md
 - name: TicketPostponed
   href: TicketPostponed.md
 - name: TicketReopened
